security, hostpots, Maintainability issues fixing